--- a/action.yml
+++ b/action.yml
@@ -50,7 +50,7 @@ runs:
     - name: "Checkout the head branch without LFS caching"
       if: ${{ inputs.lfs == 'false' }}
       id: git_checkout_no_lfs
-      uses: actions/checkout@v4.2.2
+      uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.2
       with:
         fetch-depth: ${{ env.HEAD_FETCH_DEPTH }}
         lfs: false
@@ -58,7 +58,7 @@ runs:
     - name: "Checkout the head branch with LFS caching"
       if: ${{ inputs.lfs == 'true' }}
       id: git_checkout_lfs
-      uses: nschloe/action-cached-lfs-checkout@v1.2.2
+      uses: kaiko-ai/action-cached-lfs-checkout@ce36e96f02d5a45724f099dfc0df5ebe4d4055fc # v1.2.2-patched
       with:
         fetch-depth: ${{ env.HEAD_FETCH_DEPTH }}
         token: ${{ inputs.lfs-token }}
