--- a/action.yml
+++ b/action.yml
@@ -82,3 +82,20 @@ runs:
         BASE_BRANCH_NAME: ${{ inputs.base-branch }}
         BASE_FETCH_DEPTH: ${{ env.BASE_FETCH_DEPTH }}
       run: git fetch origin ${BASE_BRANCH_NAME} --depth=${BASE_FETCH_DEPTH}
+
+    - name: "List fetched branches"
+      shell: bash
+      run: git branch -r
+
+    - name: "List fetched commits"
+      shell: bash
+      run: git log --oneline --decorate --graph --all
+
+    - name: "Show HEAD branch reference"
+      shell: bash
+      run: git show-ref ${{ inputs.head-branch }}
+
+    - name: "Show BASE branch reference"
+      if: ${{ inputs.head-only == 'false' }}
+      shell: bash
+      run: git show-ref ${{ inputs.base-branch }}
